@@ -69,3 +69,6 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - Graphics cursor now on right-most point of circle after drawing,
   as per RISC OS.
 - VDU5 text plotting is now transparent.
+- Resize window on mode change. We also now start in Mode 0, and report
+  bad mode to the program if SDL is unable to select the desired mode.
+  This has broken the teletext aspect control, so that is for now disabled.
